--- a/templates/home.html
+++ b/templates/home.html
@@ -1,2 +1,8 @@
+{% extends 'base.html' %}
+
+{%block title%}Home{% endblock %}
+
+{%block content%}
 <h1>Welcome to Mexico Bitch</h1>
 <a href="{% url 'poll:home' %}">Go to surveys</a>
+{% endblock %}
