--- a/templates/poll/home.html
+++ b/templates/poll/home.html
@@ -1,7 +1,11 @@
-<h1>Surveys</h1>
+{% extends 'base.html' %}
 
+{% block content %}
+
+<h1>{% block title%}Encuesta{% endblock %}</h1>
 <ul>
 {% for q in questions %}
 <li><a href="{% url 'poll:vote' q.id %}">{{ q }}</a></li>
 {% endfor %}
 </ul>
+{% endblock %}
