--- a/templates/poll/vote.html
+++ b/templates/poll/vote.html
@@ -1,8 +1,11 @@
-<h1>{{ question.question_text }}</h1>
+{% extends 'base.html' %}
 
+{%block content%}
+<h1>{{ question.question_text }}</h1>
 <ul>
-    <h2>Esto definira el futuro de Mexico</h2>
-    {% for c in question.choice_set.all %}
-    <li>{{ c.choice_text }}</li>
-    {% endfor %}
+  <h2>Esto definira el futuro de Mexico</h2>
+  {% for c in question.choice_set.all %}
+  <li>{{ c.choice_text }}</li>
+  {% endfor %}
 </ul>
+{% endblock %}
