--- a/templates/poll/vote.html
+++ b/templates/poll/vote.html
@@ -1,11 +1,20 @@
-{% extends 'base.html' %}
+{% block title %}Vota{% endblock%}
 
 {%block content%}
 <h1>{{ question.question_text }}</h1>
-<ul>
-  <h2>Esto definira el futuro de Mexico</h2>
+<form method="post">
+  {% csrf_token %}
   {% for c in question.choice_set.all %}
-  <li>{{ c.choice_text }}</li>
+  <input
+    type="radio"
+    name="choice"
+    id="c_{{ c.id }}"
+    value="{{ c.id }}"
+    >
+  <label for="c_{{ c.id }}">{{ c.choice_text }}</label>
+  <br>
+
   {% endfor %}
-</ul>
+  <input type="submit" value="Votar">
+</form>
 {% endblock %}
