--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    {% block JavaScript %}
+    <script src="{% static "https://cdn.jsdelivr.net/npm/chart.js" %}"></script>
+    {% endblock JavaScript %}
     <title>Encuestas | {% block title %} {% endblock %}</title>
   </head>
   <body>
